Event emitter is written. Server doesn't work

--- a/LiveTable/index.html
+++ b/LiveTable/index.html
@@ -29,6 +29,7 @@ input { border: 1px solid green; width: 30px; }
       var cell = col + i;
       var input = document.getElementById(cell);
       input.addEventListener('keyup', keyup);
+      //input.addEventListener('click',function(){alert("тыдышь "+cell)});
       cells[cell] = input;
     });
   }
