--- a/LiveTable/index.html
+++ b/LiveTable/index.html
@@ -2,12 +2,14 @@
 <html>
 <body>
 <h1>Live table</h1>
+<input id="formulae" type="text" style="width:250px" />
 <table id="table"></table>
 <style>
 input { border: 1px solid green; width: 30px; }
 </style>
 <script>
 
+  var formulae = document.getElementById('formulae');
   var table = document.getElementById('table');
   var cells = {};
   var letters = ['A', 'B', 'C', 'D', 'E', 'F'];
@@ -28,17 +30,24 @@ input { border: 1px solid green; width: 30px; }
     letters.forEach(function(col) {
       var cell = col + i;
       var input = document.getElementById(cell);
-      input.addEventListener('keyup', keyup);
+      input.addEventListener('change',change);
+      input.addEventListener('focus',focus);
+      input.addEventListener('keyup',focus);
       cells[cell] = input;
     });
   }
 
-  function keyup(event) {
+  function change(event) {
+    formulae.value = event.target.value;
     socket.send(JSON.stringify({
       cell: event.target.id,
       value: event.target.value
     }));
-  }
+  };
+
+  function focus(event){
+    formulae.value = event.target.value;
+  };
 
   var socket = new WebSocket('ws://127.0.0.1/');
 
@@ -46,6 +55,7 @@ input { border: 1px solid green; width: 30px; }
     var change = JSON.parse(event.data);
     var cell = cells[change.cell];
     cell.value = change.value;
+    cell.formulae = change.formulae;
   };
 
 </script>
