--- a/LiveTable/index.html
+++ b/LiveTable/index.html
@@ -24,29 +24,31 @@ input { border: 1px solid green; width: 30px; }
   for (var i = 1; i <= 5; i++) {
     tr = document.createElement('tr');
     tr.innerHTML = '<td>' + i + '</td>' + letters.map(function(col) {
-      return '<td><input id="' + col + i + '" type="text"></td>';
+      return '<td><input id="' + col + i + '" type="text" readonly="readonly"></td>';
     }).join('');
     table.appendChild(tr);
     letters.forEach(function(col) {
       var cell = col + i;
       var input = document.getElementById(cell);
-      input.addEventListener('change',change);
-      input.addEventListener('focus',focus);
-      input.addEventListener('keyup',focus);
+      input.addEventListener('focus', focus);
       cells[cell] = input;
     });
   }
 
+  formulae.addEventListener('change',change);
+
   function change(event) {
-    formulae.value = event.target.value;
+    event.target.cell.value = event.target.value;
+    alert(event.target);
     socket.send(JSON.stringify({
-      cell: event.target.id,
+      cell: event.target.cell.id,
       value: event.target.value
     }));
   };
 
   function focus(event){
-    formulae.value = event.target.value;
+    formulae.cell = event.target;
+    formulae.value = event.target.formulae;
   };
 
   var socket = new WebSocket('ws://127.0.0.1/');
